@@ -26,6 +26,7 @@ Version 4.* - *** **, 2001, by Shigio Yamaguchi
 * gtags: when no parser specified in config file, overloaded by default values.
 * gtags: skip variable accept full path name.
 * htags: changed to refer to macros which is defined in other C source.
+* htags: --caution option added.
 * global.texi: reference manual added.
 
 Version 4.1.1 - July 31, 2001, by Shigio Yamaguchi
